--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,12 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+dist/
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
 # IDE
 .idea/
